@@ -27,10 +27,6 @@
 <jwc id="showProperties"/>
 </jwc>
 
-<jwc id="ifShowSource">
-<jwc id="showJavaSource"/>
-</jwc>
-
 </jwc>
 </jwc>
 </jwc>
