@@ -2,7 +2,6 @@
 
 JAVA_FILES = *.java
 
-RESOURCE_FILES = *.jwc *.html *.css *.gif \
-	$(patsubst %.jwc,%.java,$(wildcard *.jwc))
+RESOURCE_FILES = *.jwc *.html *.css *.gif
 
 include $(SYS_MAKEFILE_DIR)/Package.mk
