@@ -1,17 +1,0 @@
-<!-- $Id$ -->
-
-<jwc id="ifNoSource">
-<span class="message">Source code for class <jwc id="insertClassName"/> is not available.
-</span>
-</jwc>
-
-<jwc id="ifSource">
-<table class="java-source" cellpadding=0 cellspacing=0>
-<jwc id="e">
-	<tr>
-		<th><jwc id="insertLineNumber"/></th>
-		<td><pre><jwc id="insertLine"/></pre></td>
-	</tr>
-</jwc>
-</table>
-</jwc>
