@@ -2,6 +2,6 @@
 
 JAVA_FILES = *.java
 
-RESOURCE_FILES = *.css *.html *.jwc *.java
+RESOURCE_FILES = *.css *.html *.jwc
 
 include $(SYS_MAKEFILE_DIR)/Package.mk
